# enpm809k

./: .gitignore  README.md  pyproject.toml
enpm809k/: main.py  run_svm.py
enpm809k/classifiers/: knn.py  linear_svm.py
enpm809k/datasets/: data_utils.py  get_dataset.sh
enpm809k/utils/: time.py
