[tool.poetry]
name = "enpm809k"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
six = "^1.16.0"
imageio = "^2.22.4"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
